fix for webcam image width on IE8

--- a/public/less/_roadconditions-public.less
+++ b/public/less/_roadconditions-public.less
@@ -198,7 +198,7 @@ ul {
 }
 
 .webcam {
-    width: 30%;
+    width: 28%;
     float: left;
     margin-right: 5%;
 
